p2/replic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx:latest
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: app2-volume
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
      volumes:
      - name: app2-volume
        hostPath:
          path: /vagrant/volumes/app2/
          type: Directory
