p2/app3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app3
  labels:
    app: app3
spec:
  containers:
  - image: nginx:latest
    name: app3
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30002
  type: NodePort
